// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcResourceName displays full path 1`] = `<span resource-path="images/nature/forest.jpg" resource-name="…/nature/forest.jpg" resource-type="file" uk-tooltip="images/nature/forest.jpg" class="oc-resource-name oc-text-truncate"><span class="oc-resource-path">…/nature/</span><span class="oc-resource-basename">forest</span><span class="oc-resource-extension">.jpg</span></span>`;

exports[`OcResourceName displays only direct parent 1`] = `<span resource-path="Documents/notes.txt" resource-name="Documents/notes.txt" resource-type="file" uk-tooltip="Documents/notes.txt" class="oc-resource-name oc-text-truncate"><span class="oc-resource-path">Documents/</span><span class="oc-resource-basename">notes</span><span class="oc-resource-extension">.txt</span></span>`;

exports[`OcResourceName doesn't add extension to hidden folder 1`] = `
<span resource-path=".hidden" resource-name=".hidden" resource-type="folder" class="oc-resource-name oc-text-truncate"><!----><span class="oc-resource-basename">.hidden</span>
<!----></span>
`;

exports[`OcResourceName hides the path if not enabled 1`] = `<span resource-path="images/nature/forest.jpg" resource-name="forest.jpg" resource-type="file" class="oc-resource-name oc-text-truncate"><!----><span class="oc-resource-basename">forest</span><span class="oc-resource-extension">.jpg</span></span>`;

exports[`OcResourceName renders folder names with dots completely in the basename 1`] = `
<span resource-path="folder.with.dots" resource-name="folder.with.dots" resource-type="folder" class="oc-resource-name oc-text-truncate"><!----><span class="oc-resource-basename">folder.with.dots</span>
<!----></span>
`;
